sync the code of dsoftbus
Signed-off-by: zgit2021 <zhaowenqiang14@huawei.com>
Change-Id: I08c907ed91a7ec71b31671325ed8e628812cef35

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -11,19 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import(
-    "//foundation/communication/dsoftbus/adapter/common/net/bluetooth/net_bluetooth.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
-
-if (enable_connection_ble == true || enable_discovery_ble == true) {
-  net_bluetooth_src = adapter_ble_src
-  net_bluetooth_inc = adapter_ble_inc
-  net_bluetooth_deps = adapter_ble_deps
-} else {
-  net_bluetooth_src = []
-  net_bluetooth_inc = []
-  net_bluetooth_deps = []
-}
 
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
@@ -53,7 +41,7 @@ if (defined(ohos_lite)) {
 
   if (ohos_kernel_type == "liteos_m") {
     static_library("softbus_adapter") {
-      include_dirs = common_include + net_bluetooth_inc
+      include_dirs = common_include
       include_dirs += [ "//kernel/liteos_m/kal/cmsis" ]
       if (board_name == "hispark_pegasus") {
         include_dirs +=
@@ -73,14 +61,12 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
-      sources += net_bluetooth_src
       deps = [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
-      deps += net_bluetooth_deps
       public_configs = [ ":dsoftbus_adapter_common_interface" ]
     }
   } else {
     shared_library("softbus_adapter") {
-      include_dirs = common_include + net_bluetooth_inc
+      include_dirs = common_include
       cflags = [
         "-Wall",
         "-Werror",
@@ -101,14 +87,12 @@ if (defined(ohos_lite)) {
         "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
         "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
       ]
-      sources += net_bluetooth_src
       deps = [
         "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
         "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
       deps += [ "//third_party/mbedtls:mbedtls_shared" ]
-      deps += net_bluetooth_deps
       public_configs = [ ":dsoftbus_adapter_common_interface" ]
     }
   }
@@ -129,7 +113,6 @@ if (defined(ohos_lite)) {
       "//third_party/mbedtls/include",
       "//utils/native/base/include",
     ]
-    include_dirs += net_bluetooth_inc
     sources = [
       "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
       "$softbus_adapter_common/kernel/liteos_a/lnn_ip_utils_adapter.c",
@@ -142,8 +125,6 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c",
       "$softbus_adapter_config/spec_config/softbus_config_adapter.c",
     ]
-    sources += net_bluetooth_src
-    deps = net_bluetooth_deps
     public_deps = [
       "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
       "//third_party/bounds_checking_function:libsec_static",
