--- a/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 module_output_path = "dsoftbus_standard/transmission"
 ohos_unittest("dsoftbus_auth_ble_phone") {
   module_out_path = module_output_path
-  sources = [ "dsoftbus_ble_phone.cpp" ]
+  sources = [ "ble_auth_channel_phone_test.cpp" ]
   include_dirs = [
     "$dsoftbus_root_path/core/common/inner_communication",
     "$dsoftbus_root_path/adapter/common/include",
