--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -49,8 +49,6 @@ if (defined(ohos_lite)) {
         "platform/liteos",
         "$NSTACKX_ROOT/nstackx_core/",
         "//third_party/bounds_checking_function/include/",
-        "//third_party/mbedtls/include",
-        "//third_party/mbedtls/include/mbedtls/",
       ]
       sources = [
         "core/nstackx_dev.c",
@@ -68,7 +66,7 @@ if (defined(ohos_lite)) {
         "platform/liteos/sys_timer.c",
         "platform/liteos/sys_util.c",
       ]
-      deps = [ "//third_party/mbedtls:mbedtls_shared" ]
+      deps = [ "//third_party/mbedtls" ]
     } else if (ohos_kernel_type == "linux") {
       cflags = [
         "-Wall",
@@ -82,8 +80,6 @@ if (defined(ohos_lite)) {
         "platform/unix",
         "$NSTACKX_ROOT/nstackx_core/",
         "//third_party/bounds_checking_function/include/",
-        "//third_party/mbedtls/include",
-        "//third_party/mbedtls/include/mbedtls/",
       ]
       sources = [
         "core/nstackx_dev.c",
@@ -101,7 +97,10 @@ if (defined(ohos_lite)) {
         "platform/unix/sys_timer.c",
         "platform/unix/sys_util.c",
       ]
-      deps = [ "//third_party/mbedtls:mbedtls_shared" ]
+      deps = [
+        "//third_party/mbedtls",
+        "//third_party/mbedtls:mbedtls_shared",
+      ]
     }
     public_configs = [ ":nstackx_util_header" ]
   }
@@ -128,8 +127,6 @@ if (defined(ohos_lite)) {
       "platform/unix",
       "$NSTACKX_ROOT/nstackx_core/",
       "//utils/native/base/include/",
-      "//third_party/mbedtls/include",
-      "//third_party/mbedtls/include/mbedtls/",
     ]
     sources = [
       "core/nstackx_dev.c",
@@ -149,7 +146,7 @@ if (defined(ohos_lite)) {
     ]
 
     deps = [
-      "//third_party/mbedtls:mbedtls_shared",
+      "//third_party/mbedtls",
       "//utils/native/base:utilsecurec_shared",
     ]
     public_configs = [ ":nstackx_util_header" ]
