fix: 修复软总线结构体引用weak函数的地址为0问题
Signed-off-by: SimonLi <likailong@huawei.com>

--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -45,6 +45,7 @@ if (defined(ohos_lite)) {
       if (board_name == "hispark_pegasus") {
         include_dirs +=
             [ "$hispark_pegasus_sdk_path/third_party/lwip_sack/include" ]
+        defines = [ "HISPARK_PEGASUS_USE_NETIF_GET_ADDR" ]
       }
       cflags = [ "-Wall" ]
       sources = [
