--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -147,6 +147,7 @@ if (defined(ohos_lite)) {
     ]
     sources = dsoftbus_server_common_src
     sources += [
+      "$dsoftbus_root_path/sdk/frame/standard/src/if_softbus_client.cpp",
       "common/src/softbus_server_frame.c",
       "standard/client_manager/src/softbus_client_info_manager.cpp",
       "standard/init/src/if_softbus_server.cpp",
