Description:Add meta node feature Feature or Bugfix:Feature Binary Source: No
Signed-off-by: fanxiaoyu <fanxiaoyu3@huawei.com>

--- a/adapter/default_config/feature_config/mini/config.gni
+++ b/adapter/default_config/feature_config/mini/config.gni
@@ -26,6 +26,7 @@ declare_args() {
 
   enable_auto_networking = true
   enable_dsoftbus_driver = false
+  enable_lnn_meta_node = false
 
   enable_build_shared_sdk = false
   enable_qos = false
