--- a/core/bus_center/lnn/net_ledger/net_ledger.gni
+++ b/core/bus_center/lnn/net_ledger/net_ledger.gni
@@ -17,47 +17,18 @@ bus_center_ledger_inc = [
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
 ]
-if (defined(ohos_lite)) {
-  if (ohos_kernel_type == "liteos_m") {
-    bus_center_ledger_src = [
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_device_info.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_map.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_net_capability.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_node_info.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/src/lnn_local_net_ledger.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/net_ledger.c",
-    ]
-    bus_center_ledger_deps = []
-  } else {
-    bus_center_ledger_src = [
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_device_info.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_map.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_net_capability.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_node_info.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/src/lnn_local_net_ledger.c",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/net_ledger.c",
-    ]
-    bus_center_ledger_inc += [
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/sync_ledger/include",
-      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/utils/include",
-    ]
-    bus_center_ledger_deps = []
-  }
+bus_center_ledger_src = [
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_device_info.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_map.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_net_capability.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_node_info.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/src/lnn_local_net_ledger.c",
+  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/net_ledger.c",
+]
+if (enable_lnn_meta_node) {
+  bus_center_ledger_src += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_meta_node_ledger.c" ]
 } else {
-  bus_center_ledger_src = [
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_device_info.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_map.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_net_capability.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_node_info.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/src/lnn_local_net_ledger.c",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/net_ledger.c",
-  ]
-  bus_center_ledger_inc += [
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/sync_ledger/include",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/utils/include",
-  ]
-  bus_center_ledger_deps = [ "//utils/native/base:utils" ]
+  bus_center_ledger_src += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_meta_node_ledger_virtual.c" ]
 }
+bus_center_ledger_deps = []
