--- a/tests/sdk/bus_center/unittest/BUILD.gn
+++ b/tests/sdk/bus_center/unittest/BUILD.gn
@@ -19,7 +19,9 @@ module_output_path = "dsoftbus_standard/bus_center"
 ohos_unittest("BusCenterSdkTest") {
   module_out_path = module_output_path
   sources = [ "bus_center_sdk_test.cpp" ]
-
+  if (enable_lnn_meta_node) {
+    sources += [ "bus_center_meta_node_sdk_test.cpp" ]
+  }
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
