sync the code of auth&buscenter's p2p
Signed-off-by: zgit2021 <zhaowenqiang14@huawei.com>
Change-Id: I113562fb1de46946388b3b0c21f630a6389e2557

--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -23,6 +23,7 @@ if (enable_lnn_net) {
     "$authentication_path/src/auth_common.c",
     "$authentication_path/src/auth_connection.c",
     "$authentication_path/src/auth_manager.c",
+    "$authentication_path/src/auth_p2p.c",
     "$authentication_path/src/auth_sessionkey.c",
   ]
   if (enable_ip_auth) {
