--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -22,13 +22,14 @@ declare_args() {
   enable_trans_udp = true
   enable_trans_udp_stream = false
   enable_trans_udp_file = true
+
+  enable_ip_auth = true
   enable_auth_account = false
 
-  enable_auto_networking = true
-  enable_time_sync = true
-  enable_qos = true
-  enable_dsoftbus_driver = false
+  enable_lnn_net = false
+  enable_lnn_time_sync = true
   enable_lnn_meta_node = true
+  enable_qos = true
 
   enable_build_shared_sdk = true
 }
