--- a/adapter/common/net/wifi/net_wifi.gni
+++ b/adapter/common/net/wifi/net_wifi.gni
@@ -13,18 +13,30 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
+softbus_adapter_wifi_path = "$softbus_adapter_common/net/wifi"
+
+adapter_wifi_src = []
+adapter_wifi_inc = []
 adapter_wifi_deps = []
+
 if (defined(ohos_lite) ||
     (defined(device_name) && device_name == "qemu-arm-linux")) {
-  adapter_wifi_src = [ "$softbus_adapter_common/net/wifi/common/softbus_wifi_api_adapter_virtual.c" ]
-  adapter_wifi_inc = [ "$softbus_adapter_common/net/wifi/include" ]
+  if (enable_lnn_net) {
+    adapter_wifi_src += [
+      "$softbus_adapter_wifi_path/common/softbus_wifi_api_adapter_virtual.c",
+    ]
+    adapter_wifi_inc += [ "$softbus_adapter_wifi_path/include" ]
+  }
 } else {
-  adapter_wifi_src =
-      [ "$softbus_adapter_common/net/wifi/common/softbus_wifi_api_adapter.c" ]
-  adapter_wifi_inc = [
-    "$softbus_adapter_common/net/wifi/include",
-    "//foundation/communication/wifi/interfaces/innerkits/native_c",
-    "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
-  ]
-  adapter_wifi_deps += [ "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard:wifi_sdk" ]
+  if (enable_lnn_net) {
+    adapter_wifi_src +=
+        [ "$softbus_adapter_wifi_path/common/softbus_wifi_api_adapter.c" ]
+    adapter_wifi_inc += [ "$softbus_adapter_wifi_path/include" ]
+    adapter_wifi_inc += [
+      "$softbus_adapter_common/net/wifi/include",
+      "//foundation/communication/wifi/interfaces/innerkits/native_c",
+      "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
+    ]
+    adapter_wifi_deps += [ "//foundation/communication/wifi/interfaces/innerkits/native_cpp/wifi_standard:wifi_sdk" ]
+  }
 }
