Add stream trans testcase.
Signed-off-by: xiongjun_gitee <xiongjun28@huawei.com>
Change-Id: I8823d076ff64955746efcb97f725d47f7c9cba64

--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -67,6 +67,9 @@ if (defined(ohos_lite)) {
   }
   group("unittest") {
     testonly = true
-    deps = [ ":TransSdkTest" ]
+    deps = [
+      ":TransSdkTest",
+      "udp/p2p/softbus_test_farmeworks:stream_p2p_test"
+    ]
   }
 }
