--- a/adapter/default_config/feature_config/mini/config.gni
+++ b/adapter/default_config/feature_config/mini/config.gni
@@ -29,6 +29,7 @@ declare_args() {
 
   enable_lnn_net = true
   enable_lnn_time_sync = false
+  enable_lnn_heartbeat = false
   enable_lnn_meta_node = false
   enable_qos = false
 
