--- a/adapter/default_config/feature_config/small/config.gni
+++ b/adapter/default_config/feature_config/small/config.gni
@@ -30,6 +30,7 @@ declare_args() {
 
   enable_lnn_net = true
   enable_lnn_time_sync = true
+  enable_lnn_heartbeat = false
   enable_lnn_meta_node = false
   enable_qos = false
 
