--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -29,6 +29,7 @@ declare_args() {
 
   enable_lnn_net = true
   enable_lnn_time_sync = true
+  enable_lnn_heartbeat = true
   enable_lnn_meta_node = true
   enable_qos = true
 
