--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -22,6 +22,7 @@ lite_component("softbus_test") {
       features += [
         "sdk/discovery/unittest:DiscSdkTest",
         "sdk/transmission/trans_channel:TransSdkTest",
+        "adapter/unittest:AdapterTest",
       ]
     }
   }
