--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -23,6 +23,10 @@ trans_sdk_test_common_inc = [
   "$dsoftbus_root_path/interfaces/inner_kits/transport",
   "$dsoftbus_root_path/interfaces/kits/transport",
 ]
+trans_sdk_test_common_deps = [
+  "$dsoftbus_root_path/core/common:softbus_utils",
+  "$dsoftbus_root_path/sdk:softbus_client",
+]
 
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
@@ -38,11 +42,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/softbus_property/include",
         "$softbus_adapter_config/spec_config",
       ]
-      deps = [
-        "$dsoftbus_root_path/core/common:softbus_utils",
-        "$dsoftbus_root_path/sdk:softbus_client",
-        "$hilog_lite_deps_path",
-      ]
+      deps = trans_sdk_test_common_deps
+      deps += [ "$hilog_lite_deps_path" ]
     }
   }
 } else {
@@ -53,12 +54,7 @@ if (defined(ohos_lite)) {
     module_out_path = module_output_path
     sources = trans_sdk_test_common_src
     include_dirs = trans_sdk_test_common_inc
-    deps = [
-      "$dsoftbus_root_path/core/common:softbus_utils",
-      "$dsoftbus_root_path/sdk:softbus_client",
-      "//third_party/googletest:gtest_main",
-      "//utils/native/base:utils",
-    ]
+    deps = trans_sdk_test_common_deps
     if (is_standard_system) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     } else {
